# codebase-mapper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: claude-hooks.md
tests/: test_main.py
