[project]
name = "codebase-mapper"
version = "0.1.0"
description = "Generate compact Tree-sitter repo maps for Python codebases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "networkx>=3.6.1",
    "tiktoken>=0.12.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-python>=0.25.0",
]

[tool.uv]
package = false
